--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Coiny&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+Tamil:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Scheherazade+New:wght@400;500;600;700&family=Space+Grotesk:wght@300..700&family=Teko:wght@300..700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Coiny&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+Tamil:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Scheherazade+New:wght@400;500;600;700&family=Space+Grotesk:wght@300..700&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+Tamil:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Scheherazade+New:wght@400;500;600;700&family=Space+Grotesk:wght@300..700&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+Tamil:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Scheherazade+New:wght@400;500;600;700&family=Space+Grotesk:wght@300..700&family=Teko:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <style>
-@font-face {
+  @font-face {
     src: url('capella.ttf');
     font-family: "capella";
-}
-@font-face {
+  }
+
+  @font-face {
     src: url('Futura-CondensedLight-Normal.ttf');
     font-family: "Futura-Condensed";
-}
+  }
+
   img {
     width: 100%;
   }
@@ -105,12 +107,16 @@
     padding: 0 20px;
     display: flex;
     flex-direction: column;
+    background: url(background_image_1.png);
+    background-size: 100% 100%;
 
   }
+
   span.drive_cls {
-    font-size: 16px  !important;
+    font-size: 16px !important;
     font-weight: 100;
-}
+  }
+
   .Banner_first_conent h3 {
     font-size: 25px;
     letter-spacing: 1px;
@@ -118,24 +124,28 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family: 'Public Sans';
-}
-.new_changes span {
+  }
+
+  .new_changes span {
     font-size: 40px;
-}
-.Banner_first_conent p {
+  }
+
+  .Banner_first_conent p {
     font-size: 20px;
     margin-top: 30px;
     color: #fff;
     font-family: "Public Sans", serif;
     font-weight: 500;
-}
-.Banner_first_conent h2 {
+  }
+
+  .Banner_first_conent h2 {
     font-size: 35px;
     margin: 30px 0;
     color: #fff;
     font-family: "capella";
-}
-a.open-popup-link-Banner {
+  }
+
+  a.open-popup-link-Banner {
     color: white;
     background-color: #9c5c39;
     text-decoration: none;
@@ -147,125 +157,166 @@ a.open-popup-link-Banner {
     text-align: center;
     font-weight: 700;
     letter-spacing: 0.5px;
-}
+  }
 
 
-.banner_sec_conent ul {
+  .banner_sec_conent ul {
     padding: 20px;
-}
-.banner_sec_conent ul li {
+  }
+
+  .banner_sec_conent ul li {
     margin: 7px 0;
     font-size: 14px;
     font-weight: 600;
     font-family: 'Poppins';
+  }
+
+  .chan_sec li {
     color: #fff;
-}
-.banner_form_div {
+  }
+
+  .banner_form_div {
     padding: 0 20px;
-}
-button.btn_banner {
+  }
+
+  button.btn_banner {
     padding: 6px 30px;
     color: #273658;
     font-size: 18px;
     font-weight: 700;
     border: 1px solid #273658;
-}
-.new_changes {
+  }
+
+  .new_changes {
     transform: translateY(50px);
     display: flex;
     flex-direction: column;
-}
-.iti {
+  }
+
+  .iti {
     position: relative;
     display: inline-block;
     width: 100%;
-}
-section.Banner_section_nbr {
+  }
+
+  section.Banner_section_nbr {
     overflow: hidden;
-}
-.Change_new_nbr {
+  }
+
+  .Change_new_nbr {
     transform: translateY(60px);
-    background: url(./background_image.png);
-    border-radius: 20px;
-    background-size: 100% 100%;
+
     padding: 20px;
-}
-span.price_new {
+  }
+
+  span.price_new {
     font-size: 20px !important;
     padding: 10px 30px;
     background: #fff;
     border-radius: 50%;
     filter: blur(3px);
-}
-span.bhk_three {
+  }
+
+  span.bhk_three {
     font-family: poppins;
     font-weight: 400;
-}
-input::placeholder {
-    color: #000; /* Black color */
-    opacity: 1; /* Ensure full opacity in some browsers */
-}
-@media screen and (max-width: 1400px) {
+  }
+
+  input::placeholder {
+    color: #000;
+    /* Black color */
+    opacity: 1;
+    /* Ensure full opacity in some browsers */
+  }
+
+  @media screen and (max-width: 1400px) {
     .banner_sec_conent {
-    padding: 0 20px;
+      padding: 0 20px;
     }
+
     .Banner_first_conent {
-    padding: 0 20px;
+      padding: 0 20px;
     }
+
     .banner_sec_conent ul {
-    padding: 10px;
-}
-}
-@media screen and (max-width: 1300px) {
+      padding: 10px;
+    }
+  }
+
+  @media screen and (max-width: 1300px) {
     .banenr_img img {
-    width: 100%;
-    height: 750px;
-}
-.Banner_first_conent h2 {
-    font-size: 28px;
-}
-.new_changes span {
-    font-size: 38px;
-}
-.new_changes {
-    gap: 0px;
-}
-.Banner_first_conent {
-        padding: 0 10px;
+      width: 100%;
+      height: 700px;
     }
-    .banner_sec_conent {
-        padding: 0 10px;
-    }
-}
-@media screen and (max-width: 1200px) {
-    .banner_sec_conent ul li {  
-    font-size: 14px;
-    }
+
     .Banner_first_conent h2 {
-        font-size: 35px;
+      font-size: 28px;
     }
-}
-@media screen and (max-width: 1024px) {
-    .banenr_img img {
-        height: auto;
+
+    .new_changes span {
+      font-size: 35px;
     }
-    .Banner_div_nbr {
-    grid-template-columns: 2fr;
-}
-.Banner_first_conent {
-        padding: 30px 10px;
-    }
-    .banner_sec_conent {
-        padding: 30px 10px;
-    }
+
     .new_changes {
-        gap: 0px;
-        transform: translateY(0px);
+      gap: 0px;
     }
+
+    .Banner_first_conent {
+      padding: 0 10px;
+    }
+
+    .banner_sec_conent {
+      padding: 0 10px;
+    }
+  }
+
+  @media screen and (max-width: 1200px) {
+    .banner_sec_conent ul li {
+      font-size: 12px;
+    }
+
+    .banenr_img img {
+      width: 100%;
+      height: 760px;
+    }
+
+    .Banner_first_conent h2 {
+      font-size: 30px;
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    .banenr_img img {
+      height: auto;
+    }
+
+    .Banner_div_nbr {
+      grid-template-columns: 2fr;
+    }
+
+    .Banner_first_conent {
+      padding: 30px 10px;
+    }
+
+    .banner_sec_conent {
+      padding: 30px 10px;
+    }
+
+    .new_changes {
+      gap: 0px;
+      transform: translateY(0px);
+    }
+
     .Change_new_nbr {
-    transform: translateY(0px);
-}
-}
+      transform: translateY(0px);
+    }
+
+    .banenr_img img {
+      width: 100%;
+      height: auto;
+    }
+  }
+
   @media screen and (max-width: 768px) {
     .property-details {
       grid-template-columns: 1fr;
@@ -281,13 +332,15 @@ input::placeholder {
       border-right: 0;
     }
   }
+
   @media screen and (max-width: 425px) {
     .banner_sec_conent ul li {
-        font-size: 12px;
-        margin: 2px;
+      font-size: 12px;
+      margin: 2px;
     }
+
     .banner_sec_conent {
-        padding: 30px 5px;
+      padding: 30px 5px;
     }
   }
 </style>
@@ -299,47 +352,49 @@ input::placeholder {
         <img src="Banner-Image 1.png" alt="">
       </div>
       <div class="Banner_first_conent">
-<div class="new_changes">
-    <h3>EXPERIENCE THE ART OF
-      <span>  LUXURIOUS LIVING</span></h3>
-      <h2><span class="bhk_three">3 BHK </span> 
-        <br>HIGH RISE APARTMENTS</h2>
+        <div class="new_changes">
+          <h3>EXPERIENCE THE ART OF
+            <span> LUXURIOUS LIVING</span>
+          </h3>
+          <h2><span class="bhk_three">3 BHK </span>
+            <br>HIGH RISE APARTMENTS
+          </h2>
 
-      <p style="font-weight:200 ;">STARTS AT <span class="price_new">1 Cr</span> </p>
-      <div class="banner-enquiry-btn">
-        <a href="javascript:void(0)" data-magpopup="#enquiryForm" class="open-popup-link-Banner">ENQUIRY NOW</a>
-      </div>
-      <p style="text-align:center"><img alt="" src="https://www.nbrgroup.in/assets/new-website/images/location.png" style="border:0px; box-sizing:border-box; margin:0px 5px 0px 0px; padding:0px; text-align:center; vertical-align:middle; width:25px"> SARJAPUR ROAD, WHITEFIELD <br>(5min <span class="drive_cls">Drive from</span> RGA Tech&nbsp;Park)
-      </p>
-</div>
+          <p style="font-weight:200 ;">STARTS AT <span class="price_new">1 Cr</span> </p>
+          <div class="banner-enquiry-btn">
+            <a href="javascript:void(0)" data-magpopup="#enquiryForm" class="open-popup-link-Banner">ENQUIRY NOW</a>
+          </div>
+          <p style="text-align:center"><img alt="" src="https://www.nbrgroup.in/assets/new-website/images/location.png" style="border:0px; box-sizing:border-box; margin:0px 5px 0px 0px; padding:0px; text-align:center; vertical-align:middle; width:25px"> SARJAPUR ROAD, WHITEFIELD <br>(5min <span class="drive_cls">Drive from</span> RGA Tech&nbsp;Park)
+          </p>
+        </div>
 
       </div>
       <div class="banner_sec_conent">
         <div class="Change_new_nbr">
-            <ul style="list-style: none;">
-                <li>➤  Prime Location Off Sarjapur Road Bangalore</li>
-                <li>➤ 5 Mins From WIPRO Kodathi & RGA Tech Park</li>
-                <li>➤ 10 Mins To Kasavanahalli & Varthur Bangalore</li>
-                <li>➤ 10 Mins From ITPL Whitefield & Hope Farm Jn.</li>
-                <li>➤ Just 20 Mins To HSR Layout & Electronic City</li>
-                <li>➤ 30,000 SFT Clubhouse 40+ Modern Amenities</li>
-                <li>➤ Spread Over 10 Acres With 80% Open Spaces</li>
-                <li>➤ 600 Homes (B+G+25 Floor) - 4 Stunning Tower</li>
-              </ul>
-              <div class="banner_form_div">
-                <form>
-                  <div class="form-group">
-                    <input type="text" id="name" name="name" placeholder="NAME :">
-                  </div>
-                  <div class="form-group">
-                    <input type="email" id="email" name="email" placeholder="E-MAIL :">
-                  </div>
-                  <div class="form-group phone-input" >
-                    <input type="tel" id="phone" name="phone" placeholder="PHONE :">
-                  </div>
-                  <div  class="form-group phone-input" style="text-align: center;"><button type="submit" class="btn_banner">Submit</button></div>
-                </form>
+          <ul class="chan_sec" style="list-style: none;">
+            <li>➤ Prime Location Off Sarjapur Road Bangalore</li>
+            <li>➤ 5 Mins From WIPRO Kodathi & RGA Tech Park</li>
+            <li>➤ 10 Mins To Kasavanahalli & Varthur Bangalore</li>
+            <li>➤ 10 Mins From ITPL Whitefield & Hope Farm Jn.</li>
+            <li>➤ Just 20 Mins To HSR Layout & Electronic City</li>
+            <li>➤ 30,000 SFT Clubhouse 40+ Modern Amenities</li>
+            <li>➤ Spread Over 10 Acres With 80% Open Spaces</li>
+            <li>➤ 600 Homes (B+G+25 Floor) - 4 Stunning Tower</li>
+          </ul>
+          <div class="banner_form_div">
+            <form>
+              <div class="form-group">
+                <input type="text" id="name" name="name" placeholder="NAME :">
               </div>
+              <div class="form-group">
+                <input type="email" id="email" name="email" placeholder="E-MAIL :">
+              </div>
+              <div class="form-group phone-input">
+                <input type="tel" id="phone" name="phone" placeholder="PHONE :">
+              </div>
+              <div class="form-group phone-input" style="text-align: center;"><button type="submit" class="btn_banner">Submit</button></div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
@@ -373,11 +428,11 @@ input::placeholder {
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
   <script>
     const phoneInputField = document.querySelector("#phone");
-  
+
     const iti = window.intlTelInput(phoneInputField, {
       initialCountry: "auto",
       separateDialCode: true,
-      geoIpLookup: function(callback) {
+      geoIpLookup: function (callback) {
         fetch("https://ipapi.co/json")
           .then(response => response.json())
           .then(data => callback(data.country_code.toLowerCase()))
@@ -386,7 +441,7 @@ input::placeholder {
       utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
     });
   </script>
-  
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
