--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
   }
 
   .banner_sec_conent ul li {
-    margin: 7px 0;
-    font-size: 14px;
+    margin: 5px 0;
+    font-size: 12px;
     font-weight: 600;
     font-family: 'Poppins';
   }
@@ -227,6 +227,19 @@
     /* Black color */
     opacity: 1;
     /* Ensure full opacity in some browsers */
+  }
+
+  ul.chan_sec {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0px 0px 10px 0;
+    margin: 0px 0px 10px 40px;
+  }
+
+  .Change_new_nbr {
+    transform: translateY(60px);
+    padding: 10px 0 0 10px;
   }
 
   @media screen and (max-width: 1400px) {
