--- a/index.html
+++ b/index.html
@@ -351,6 +351,9 @@
       font-size: 12px;
       margin: 2px;
     }
+    ul.chan_sec {
+    margin: 0px 0px 10px 20px;
+}
 
     .banner_sec_conent {
       padding: 30px 5px;
