--- a/index.html
+++ b/index.html
@@ -30,7 +30,132 @@
     width: 100%;
   }
 
-  section.New_section_1 {
+  
+  @media screen and (max-width: 2560px) {
+    .Banner_first_conent h3 {
+    font-size: 55px;
+    letter-spacing: 1px;
+    background: linear-gradient(to right, #C46453, #999999);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: 'Public Sans';
+}
+.new_changes span {
+    font-size: 60px;
+}
+span.bhk_three {
+    font-family: poppins;
+    font-weight: 400;
+}
+.Banner_first_conent h2 {
+    font-size: 55px;
+    margin: 30px 0;
+    color: #fff;
+    font-family: "capella";
+}
+.Banner_first_conent h2 {
+    font-size: 55px;
+    margin: 30px 0;
+    color: #fff;
+    font-family: "capella";
+}
+.Banner_first_conent p {
+    font-size: 45px;
+    margin-top: 30px;
+    color: #fff;
+    font-family: "Public Sans", serif;
+    font-weight: 500;
+}
+a.open-popup-link-Banner {
+    color: white;
+    background-color: #9c5c39;
+    text-decoration: none;
+    border: 1px solid white;
+    border-radius: 5px;
+    width: auto;
+    padding: 10px 30px;
+    display: inline-block;
+    text-align: center;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+    font-size: 45px;
+}
+.Banner_first_conent p {
+    font-size: 45px;
+    margin-top: 30px;
+    color: #fff;
+    font-family: "Public Sans", serif;
+    font-weight: 500;
+}
+.Banner_first_conent p img {
+    width: 75px;
+}
+span.drive_cls {
+    font-size: 40px !important;
+    font-weight: 100;
+}
+.banner_sec_conent {
+    background: #273658;
+    padding: 0 20px;
+    display: flex
+;
+    flex-direction: column;
+    background: url(background_image_1.png);
+    background-size: 100% 100%;
+}
+.Change_new_nbr {
+    transform: translateY(60px);
+    padding: 100px 20px;
+}
+ul.chan_sec {
+    display: flex
+;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0px 0px 10px 0;
+    margin: 0px 0px 10px 40px;
+}
+.banner_sec_conent ul li {
+    margin: 5px 0;
+    font-size: 25px;
+    font-weight: 600;
+    font-family: 'Poppins';
+}
+.banner_form_div {
+    padding: 0 20px;
+}
+.banner_sec_conent .form-group {
+    margin-bottom: 15px;
+}
+.banner_sec_conent input {
+    width: 100%;
+    padding: 5px;
+    border: none;
+    font-size: 16px;
+}
+.banner_sec_conent .phone-input {
+    position: relative;
+}
+button.btn_banner {
+    padding: 6px 30px;
+    color: #273658;
+    font-size: 18px;
+    font-weight: 700;
+    border: 1px solid #273658;
+}
+.New_section_1 h4 {
+    font-size: 35px;
+    font-weight: 600;
+    margin: 10px 0;
+}
+.New_section_1 p {
+    font-size: 35px;
+    margin: 10px 0;
+}
+  }
+
+  @media screen and (max-width: 1600px) {
+    section.New_section_1 {
     padding: 30px 0;
   }
 
@@ -157,6 +282,7 @@
     text-align: center;
     font-weight: 700;
     letter-spacing: 0.5px;
+    font-size: 16px;
   }
 
 
@@ -241,8 +367,6 @@
     transform: translateY(60px);
     padding: 10px 0 0 10px;
   }
-
-  @media screen and (max-width: 1400px) {
     .banner_sec_conent {
       padding: 0 20px;
     }
