--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
   
   @media screen and (max-width: 2560px) {
+    .Banner_div_nbr {
+        display: grid;
+        grid-template-columns: 2fr 2fr 2fr;
+    }
     .Banner_first_conent h3 {
     font-size: 55px;
     letter-spacing: 1px;
