--- a/index.html
+++ b/index.html
@@ -391,14 +391,14 @@
     margin: 10px;
   }
 
-  .down_btn {
+.down_btn {
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    background: #273658;
+    background: #2D3192;
     border-radius: 5px;
     padding: 10px;
-  }
+}
 
   .down_btn a {
     color: #fff;
@@ -419,12 +419,13 @@
 
   .enquiry_btn a.open_popup_link {
     padding: 15px 30px;
-    background: #273658;
-    color: #fff;
+    background: #F2B80C;
+    color: #000;
     font-size: 20px;
     border-radius: 13px;
     text-decoration: none;
-  }
+    font-weight: 700;
+}
 
   @media screen and (max-width: 1400px) {
     .banner_sec_conent {
