--- a/index.html
+++ b/index.html
@@ -593,13 +593,14 @@ img.Mobile_banner {
           <h3>EXPERIENCE THE ART OF
             <span> LUXURIOUS LIVING</span>
           </h3>
+          <hr>
           <h2><span class="bhk_three">3 BHK </span>
             <br>HIGH RISE APARTMENTS
           </h2>
 
-          <p style="font-weight:200 ;">STARTS AT <span class="price_new">1 Cr</span> </p>
+          <p style="font-weight:200 ;">TO KNOW THE PRICE </p>
           <div class="banner-enquiry-btn">
-            <a href="javascript:void(0)" data-magpopup="#enquiryForm" class="open-popup-link-Banner">ENQUIRY NOW</a>
+            <a href="javascript:void(0)" data-magpopup="#enquiryForm" class="open-popup-link-Banner">CLICK HERE</a>
           </div>
           <p style="text-align:center"><img alt="" src="https://www.nbrgroup.in/assets/new-website/images/location.png" style="border:0px; box-sizing:border-box; margin:0px 5px 0px 0px; padding:0px; text-align:center; vertical-align:middle; width:25px"> SARJAPUR ROAD, WHITEFIELD <br>(5min <span class="drive_cls">Drive from</span> RGA Tech&nbsp;Park)
           </p>
@@ -609,14 +610,13 @@ img.Mobile_banner {
       <div class="banner_sec_conent">
         <div class="Change_new_nbr">
           <ul class="chan_sec" style="list-style: none;">
-            <li>➤ Prime Location Off Sarjapur Road Bangalore</li>
-            <li>➤ 5 Mins From WIPRO Kodathi & RGA Tech Park</li>
-            <li>➤ 10 Mins To Kasavanahalli & Varthur Bangalore</li>
-            <li>➤ 10 Mins From ITPL Whitefield & Hope Farm Jn.</li>
-            <li>➤ Just 20 Mins To HSR Layout & Electronic City</li>
-            <li>➤ 30,000 SFT Clubhouse 40+ Modern Amenities</li>
-            <li>➤ Spread Over 10 Acres With 80% Open Spaces</li>
-            <li>➤ 600 Homes (B+G+25 Floor) - 4 Stunning Tower</li>
+            <li>➤ 3BHK High-Rise Luxury Apartments</li>
+            <li>➤ Prime Location Sarjapur Road, Whitefield, Bangalore</li>
+            <li>➤ Expansive 9.65 Acres of Luxury Living</li>
+            <li>➤ Four Iconic Towers soaring to Heights (2B+G+26)</li>
+            <li>➤ Just 5 Minutes to WIPRO Kodathi & RGA Tech Park</li>
+            <li>➤ Endless Stretch of Open Spaces Blends Nature</li>
+            <li>➤ Experience True Privacy with Zero Common Walls</li>
           </ul>
           <div class="banner_form_div">
             <form>
