--- a/index.html
+++ b/index.html
@@ -251,14 +251,11 @@
   }
 
   .Banner_first_conent h3 {
-    font-size: 25px;
+    font-size: 21px;
     letter-spacing: 1px;
-    background: linear-gradient(to right, #C46453, #999999);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #C46453;
     font-family: 'Public Sans';
-  }
-
+}
   .new_changes span {
     font-size: 40px;
   }
@@ -565,6 +562,7 @@ img.Mobile_banner {
 }
   }
 
+
   @media screen and (max-width: 425px) {
     .banner_sec_conent ul li {
       font-size: 12px;
@@ -577,6 +575,20 @@ img.Mobile_banner {
 
     .banner_sec_conent {
       padding: 30px 5px;
+    }
+  }
+  @media screen and (max-width:375px) {
+    .new_changes span {
+        font-size: 30px;
+    }
+    .Banner_first_conent h2 {
+        font-size: 25px;
+    }
+    .Banner_first_conent p {
+    font-size: 18px;
+}
+ul.chan_sec {
+        margin: 0;
     }
   }
 </style>
