--- a/index.html
+++ b/index.html
@@ -556,6 +556,9 @@ img.Mobile_banner {
     top: 210px;
     left: 0;
 }
+.Banner_first_conent {
+        padding: 20px 10px;
+    }
 .owl-carousel .owl-nav button.owl-next, .owl-carousel button.owl-dot {
     top: 210px;
     right: 0;
@@ -568,9 +571,15 @@ img.Mobile_banner {
       font-size: 12px;
       margin: 2px;
     }
-
+    .Banner_first_conent p {
+        margin-top: 10px;
+    }
     ul.chan_sec {
       margin: 0px 0px 10px 20px;
+    }
+    .Banner_first_conent h2 {
+        font-size: 25px;
+        margin: 10px 0;
     }
 
     .banner_sec_conent {
@@ -605,7 +614,6 @@ ul.chan_sec {
           <h3>EXPERIENCE THE ART OF
             <span> LUXURIOUS LIVING</span>
           </h3>
-          <hr>
           <h2><span class="bhk_three">3 BHK </span>
             <br>HIGH RISE APARTMENTS
           </h2>
