--- a/index.html
+++ b/index.html
@@ -603,6 +603,12 @@ img.Mobile_banner {
     .Banner_first_conent p {
     font-size: 18px;
 }
+.owl-carousel .owl-nav button.owl-next, .owl-carousel button.owl-dot {
+        top: 160px;
+    }
+    .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot {
+        top: 160px;
+    }
 ul.chan_sec {
         margin: 0;
     }
