--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="https://www.nbrgroup.in/assets/new-website/css/style.css">
 
   <!-- jQuery (Required) -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -28,7 +29,7 @@
 
 </head>
 <style>
-  .floorplan-slider .owl-dots {
+  .floorplan-slider_1 .owl-dots {
     display: none;
   }
 
@@ -65,7 +66,7 @@
   }
 
   /* Slider */
-  .floorplan-slider {
+  .floorplan-slider_1 {
     padding: 20px 0;
   }
 
@@ -616,6 +617,42 @@ ul.chan_sec {
 </style>
 
 <body>
+  <header>
+    <div class="container">
+        <div class="w-100 d-flex justify-content-between align-items-center">
+
+
+            <div class="menu_btn btn11" data-menu="11">
+                <div class="icon-left"></div>
+                <div class="icon-right"></div>
+            </div>
+            <div class="nbr-logo">
+                <a href="https://www.nbrgroup.in/"><img src="https://www.nbrgroup.in/assets/new-website/images/NBR-logo-new.gif" alt="NBR Logo"></a>
+            </div>
+            <div class="cnt-btn">
+                <a href="/contact-us">CONNECT</a>
+                <div class="sub-menu">
+                    <a href="tel:8880003399"><img src="https://www.nbrgroup.in/assets/new-website/images/phone.png" alt="Phone Icon">8880003399</a>
+                    <br>
+                    <a href="tel:8884610800"><img src="https://www.nbrgroup.in/assets/new-website/images/phone.png" alt="Phone Icon">8884610800</a>
+                </div>
+            </div>
+            <div class="menu_lists">
+                <ul class="d-lg-flex align-items-center justify-content-end custom_class">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/about-us">About us</a></li>
+                    <li><a href="/blog/">Blogs</a></li>
+                    <li><a href="/faq">FAQs</a></li>
+                    <li><a href="/press-release">Press Releases</a></li>
+                    <li><a href="/contact-us">Contact Us</a></li>
+                </ul>
+            </div>
+
+
+        </div>
+    </div>
+</header>
   <section class="Banner_section_nbr">
     <div class="Banner_div_nbr">
       <div class="banenr_img">
@@ -698,7 +735,7 @@ ul.chan_sec {
   <!-- Luxury Redefined section start  -->
   <section class="Luxury-Redefined">
     <div class="container">
-      <div class="luxury-redefined-wrapper">
+      <div class="luxury-redefined-wrapper_1">
         <div class="luxury-exclusive-title">
           <div class="row ">
             <div class="col-lg-12">
@@ -706,8 +743,8 @@ ul.chan_sec {
             </div>
           </div>
         </div>
-        <div class="luxury-enquiry-wrapper">
-          <div class="owl-carousel owl-theme floorplan-slider">
+        <div class="luxury-enquiry-wrapper_1">
+          <div class="owl-carousel owl-theme floorplan-slider_1">
             <div class="item">
               <div class="luxury-enquiry-content">
                 <div class="luxury-exclusive-img">
@@ -776,6 +813,188 @@ ul.chan_sec {
       </div>
     </div>
   </section>
+  <footer class="footer-bg mt-5">
+    <div class="text-left footer-wrapper container">
+        <div class="row align-items-start footer-row">
+            <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 link-wrapper">
+                <div class="quick-links">
+                    <div class="row align-items-start">
+                        <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6">
+                            <div class="quick-menu">
+                                <h4>NBR QUICK MENU</h4>
+                            </div>
+                            <p><a href="/">Home</a></p>
+                            <p><a href="/about-us">About Us</a></p>
+                            <p><a href="/blog/">Blogs</a></p>
+                            <p><a href="/press-release">Press Releases</a></p>
+                            <p><a href="/contact-us">Contact Us</a></p>
+                            <p><a href="/faq">FAQ</a></p>
+                        </div>
+                        <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6">
+                            <div class="quick-menu">
+                                <h4>NBR QUICK MENU</h4>
+                            </div>
+                            <p><a href="/plots-for-sale-sarjapur-road">Plots In Sarjapur Road</a></p>
+                            <p><a href="/plots-for-sale-hosur">Plots In Hosur</a></p>
+                            <p><a href="/plots-for-sale-bagalur-road">Plots In Bagalur</a></p>
+                            <p><a href="/blog/villa-plots-in-bangalore-east/">Plots In East Bangalore</a></p>
+                        </div>
+                        <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6">
+                            <div class="quick-menu">
+                                <h4>NBR QUICK MENU</h4>
+                            </div>
+                            <p><a href="/apartments-for-sale-in-bangalore">NBR Apartments</a></p>
+                            <p><a href="/flats-in-whitefield-bangalore">Flats In Whitefield </a></p>
+                            <p><a href="/apartments-for-sale-in-whitefield">Apartments In Whitefield</a></p>
+                            <p><a href="/apartments-for-sale-in-bangalore-east">Flats In East Bangalore</a></p>
+                            <p><a href="/flats-in-kodathi/">Flats In Kodathi</a></p>
+                            <p><a href="/apartments-in-gunjur/">Apartments In Gunjur</a></p>
+                            <p><a href="/apartments-for-sale-sarjapur-road">Luxury Apartments In Sarjapur Road</a></p>
+                            <p><a href="/flats-in-kaikondrahalli/">Apartments In Kaikondrahalli</a></p>
+                            <p><a href="/flats-in-panathur/">Apartments In Panathur</a></p>
+                            <p><a href="/4-bhk-apartment-in-sarjapur-road/">4 BHK Apartment In Sarjapur Road </a></p>
+                        </div>
+                        <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6">
+                            <div class="quick-menu">
+                                <h4>GENERAL QUERIES</h4>
+                            </div>
+                            <div class="contact-info-wrapper text-left">
+                                <div class="contact-info">
+                                    <p class="address">
+                                        <a href="mailto:frontdesk@nbrgroup.in ">
+                                            <svg class="address-logo" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"></path>
+                                            </svg>
+                                            frontdesk@nbrgroup.in
+                                        </a>
+                                    </p>
+
+                                    <p class="address">
+                                        <!-- <a href="tel:8025532688">
+                                            <svg class="address-logo" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                                            </svg>
+                                            +91-9035097084
+                                        </a> -->
+                                        <a href="tel:8884610800">
+                                            <svg class="address-logo" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                                <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"></path>
+                                            </svg>
+                                            Apartments : +91-8884610800
+                                        </a>
+                                        <br>
+                                        <br>
+                                        <a href="tel:8880003399">
+                                            <svg class="address-logo" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                                <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"></path>
+                                            </svg>
+                                            Plot : +91-8880003399
+                                        </a>
+                                        <br>
+                                        <br>
+                                    </p>
+
+                                    <div class="logo-wrapper footer_address_logo">
+                                        <span class="address-logo">
+                                            <svg style="fill:#fff" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
+                                                <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A32 32 0 0 1 8 14.58a32 32 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10"></path>
+                                                <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4m0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6"></path>
+                                            </svg>
+                                        </span>
+                                        <p>#168, 19th Main Road, Sector-4, HSR Layout Bengaluru, 560102</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="follow-us-wrapper">
+                                <div class="quick-menu">
+                                    <h4>FOLLOW US</h4>
+                                </div>
+                                <div class="follow-us-logo">
+                                    <div class="follow-logo-img">
+                                        <a target="_blank" rel="noreferrer" href="https://www.facebook.com/nbrdevelopers">
+                                            <img src="https://www.nbrgroup.in/assets/new-website/images/facebook-logo.svg" alt="Facebook">
+                                        </a>
+                                    </div>
+                                    <div class="follow-logo-img">
+                                        <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/company/nbr-group-bangalore/">
+                                            <img src="https://www.nbrgroup.in/assets/new-website/images/linked-in-logo.svg" alt="linkedin">
+                                        </a>
+                                    </div>
+                                    <div class="follow-logo-img">
+                                        <a target="_blank" rel="noreferrer" href="https://mobile.twitter.com/nbrmeadows">
+                                            <img src="https://www.nbrgroup.in/assets/new-website/images/x-logo.svg" alt="twitter">
+                                        </a>
+                                    </div>
+                                    <div class="follow-logo-img">
+                                        <a target="_blank" rel="noreferrer" href="https://www.youtube.com/user/nbrbangalore/">
+                                            <img src="https://www.nbrgroup.in/assets/new-website/images/youtube-logo.svg" alt="youtube">
+                                        </a>
+                                    </div>
+                                    <div class="follow-logo-img">
+                                        <a target="_blank" rel="noreferrer" href="https://www.instagram.com/_nbrgroup_/">
+                                            <img src="https://www.nbrgroup.in/assets/new-website/images/insta-logo.svg" alt="instagram">
+                                        </a>
+                                    </div>
+                                    <div class="follow-logo-img">
+                                        <a target="_blank" rel="noreferrer" href="https://in.pinterest.com/nbrgroup_1975/">
+                                            <img src="https://www.nbrgroup.in/assets/new-website/images/pintrest-logo.svg" alt="pintrest">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 mobile-footer">
+                <div class="mobile-footer-logo " >
+                <img src="https://www.nbrgroup.in/assets/new-website/images/footer-logo-new.svg" alt="">
+
+                </div>
+            </div> -->
+        <!-- <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12"> -->
+        <div class="">
+            <div class="address_wrapper">
+                <div class="row">
+                    <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 footer-logo">
+                        <div class="footer-logo-img">
+                            <a href="#">
+                                <img src="https://www.nbrgroup.in/assets/new-website/images/nbr-white-logo.svg" alt="White Logo">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                        <div class="standard-logo">
+                            <div class="iso-logo-img">
+                                <img src="https://www.nbrgroup.in/assets/new-website/images/iso-logo.png" alt="ISO">
+                            </div>
+                            <div class="credai-logo-img">
+                                <img src="https://www.nbrgroup.in/assets/new-website/images/credai-logo.png" alt="Credai">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- </div> -->
+    </div>
+
+    <div class="disclaimer container">
+        <div class="row">
+            <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-4 col-12">
+                <p class="copyright text-left">Copyright ©2025 NBR Group. All Rights Reserved</p>
+            </div>
+            <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-8 col-sm-4 col-12">
+                <p class="terms-cond">
+                    <!-- <a href="#disclaimer.php"> Terms & Conditions</a> | -->
+                    <a href="/privacy-policy"> Privacy Policy</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
   <!-- Luxury Redefined section end -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
   <script>
@@ -802,7 +1021,7 @@ ul.chan_sec {
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     $(document).ready(function () {
-      $('.floorplan-slider').owlCarousel({
+      $('.floorplan-slider_1').owlCarousel({
         loop: true,
         margin: 30,
         nav: true,
