--- a/index.html
+++ b/index.html
@@ -579,6 +579,12 @@ img.Mobile_banner {
       font-size: 12px;
       margin: 2px;
     }
+    .owl-carousel .owl-nav button.owl-next, .owl-carousel button.owl-dot {
+        top: 160px;
+    }
+    .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot {
+        top: 160px;
+    }
     .Banner_first_conent p {
         margin-top: 10px;
     }
