--- a/index.html
+++ b/index.html
@@ -428,7 +428,10 @@
 img.Mobile_banner {
     display: none;
 }
-
+section.Banner_section_nbr {
+    overflow: hidden;
+    transform: translateY(50px);
+}
   @media screen and (max-width: 1400px) {
     .banner_sec_conent {
       padding: 0 20px;
@@ -659,6 +662,7 @@ ul.chan_sec {
         </div>
     </div>
 </header>
+<br>
   <section class="Banner_section_nbr">
     <div class="Banner_div_nbr">
       <div class="banenr_img">
