--- a/index.html
+++ b/index.html
@@ -432,6 +432,9 @@ section.Banner_section_nbr {
     overflow: hidden;
     transform: translateY(50px);
 }
+section.Luxury-Redefined {
+    transform: translateY(50px);
+}
   @media screen and (max-width: 1400px) {
     .banner_sec_conent {
       padding: 0 20px;
