--- a/index.html
+++ b/index.html
@@ -1139,6 +1139,8 @@
             </div>
             <p style="text-align:center"><img alt="" src="https://www.nbrgroup.in/assets/new-website/images/location.png" style="border:0px; box-sizing:border-box; margin:0px 5px 0px 0px; padding:0px; text-align:center; vertical-align:middle; width:25px"> SARJAPUR ROAD, WHITEFIELD <br>(5min <span class="drive_cls">Drive from</span> RGA Tech&nbsp;Park)
             </p>
+            <p style="font-weight: 400;"><i class="fa fa-phone" aria-hidden="true"></i>  <a href="tel:8884610800">8884610800</a></p>
+
           </div>
 
         </div>
