--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    background: #9C5C39;
+    background: #264790;
     border-radius: 5px;
     padding: 10px;
 }
