--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       content: none;
     }
     .fixed-footer-cust {
-    background: #9C5C39 !important;
+    background: #264790 !important;
     text-align: center;
     padding: 10px 0px 10px 0px;
     width: 100%;
@@ -335,15 +335,16 @@
     z-index: 99;
 }
 .fix-link {
-    color: #264790 !important;
+    color: #fff;
     font-size: 16px;
     padding: 0;
-    background: #fff;
     border: none;
     background-image: none;
     box-shadow: none;
     font-weight: 600;
 }
+
+
     h1,
     h3 {
       font-family: "Scheherazade New", serif;
@@ -816,9 +817,14 @@
       font-weight: 700;
       text-decoration: none;
     }
-    .banner-enquiry-btn a{
-      background-color: #fff;
-    }
+    .div-line {
+    border-right: 1px solid #fff;
+}
+    .banner-enquiry-btn a {
+    background-color: #fff;
+    color: #264790;
+    font-weight: 700;
+}
     .highrise-content .discover-btn button {
       background-color: #264790;
       border: 1px solid #264790;
@@ -1168,7 +1174,7 @@
 
             <p style="font-weight:200 ;">TO KNOW THE PRICE </p>
             <div class="banner-enquiry-btn">
-              <a class="btn fix-link broucher-click open-popup-link-new" href="javascript:void(0)" data-magpopup="#bookForm">
+              <a class="btn  broucher-click open-popup-link-new" href="javascript:void(0)" data-magpopup="#bookForm">
                 CLICK HERE
             </a>
             </div>
@@ -2538,8 +2544,8 @@
                 <i class="fa fa-phone f-icon" aria-hidden="true"></i> Call Now
             </a>
         </div> -->
-        <div class="col-lg-6 col-sm-6 col-xs-6 div-line pd0">
-          <a class="btn fix-link broucher-click open-popup-link-new" href="javascript:void(0)" data-magpopup="#bookForm">
+        <div class="col-lg-6 col-sm-6 col-xs-6 div-line pd0 div-line ">
+          <a class="btn fix-link broucher-click open-popup-link-new d-load" href="javascript:void(0)" data-magpopup="#bookForm">
               Download Brochure
           </a>
       </div>
