--- a/ex.html
+++ b/ex.html
@@ -1540,7 +1540,7 @@ Property prices have appreciated consistently, making Sarjapur Road a top choice
          <div class="stars">★★★★★</div>
          <p class="review-text">Its is a Very nice and stylish project. We liked the configuration of all the units. 1 bhk units are thoughtfully designed and good investment opportunity with ample space. Good open space in overall project. Ms Sayesha was very helpful in explaining about little things about the project.</p>
        </div>
-       <div class="testimonial-item">
+<!--        <div class="testimonial-item">
          <div class="avatar">B</div>
          <h4>Baban Thakur</h4>
          <div class="stars">★★★★★</div>
@@ -1563,36 +1563,8 @@ Property prices have appreciated consistently, making Sarjapur Road a top choice
          <h4>Rishav Jha</h4>
          <div class="stars">★★★★★</div>
          <p class="review-text">This road is fastly developing. I am happy that I will be owing a flat in this road soon. There are many high rises in the surrounding and We found that NBR Group is offering at a very good price since its in launch phase</p>
-       </div>
-       <div class="testimonial-item">
-         <div class="avatar">N</div>
-         <h4>Nitish Yadav92</h4>
-         <div class="stars">★★★★★</div>
-         <p class="review-text">NBR Group has always been reliable when it comes to real estate. I’ve bought a villa plot from them before, and now their new apartments on Sarjapur Road are just as impressive. It’s a great location with good connectivity
-         </p>
-       </div>
-       <div class="testimonial-item">
-         <div class="avatar">A</div>
-         <h4>Anuj Kumar YT Official</h4>
-         <div class="stars">★★★★★</div>
-         <p class="review-text">The location of the apartments is quite interior but the price of the apartments is quite good compared to the surrounding areas. I am happy to own a home in Sarjapur - Mullur Road .
-         </p>
-       </div>
-       <div class="testimonial-item">
-         <div class="avatar">P</div>
-         <h4>Puja Kumari</h4>
-         <div class="stars">★★★★★</div>
-         <p class="review-text">We plan to invest in 1 BHK for investment. We found a nice 1 BHK near Sarjapur Road which is not very far from where we live. The developers NBR Group appeared good.
-         </p>
-       </div>
-       <div class="testimonial-item">
-         <div class="avatar">S</div>
-         <h4>
-           Sabrin Parween</h4>
-         <div class="stars">★★★★★</div>
-         <p class="review-text">Thanks Archana for assisiting me with the questions I had and showing me the best apartments according to my interest and budget. I am booking my apartment here now. She also helped me to get the best possible price for me .
-         </p>
-       </div>
+       </div> -->
+       
      </div>
 
      <button class="callback-btn">Get A Callback</button>
