--- a/ex.html
+++ b/ex.html
@@ -675,7 +675,9 @@ background: #E2E2E2;
         <a class="arcprime-pageloading" href="https://www.nbrgroup.in"> <img src="https://www.nbrgroup.in/assets/website/images/logo.png" alt="NBR Developer logo"> </a>
     </div>
 </div>
-
+<div class="conet_div_new_nav">
+  <p>RERA Number - PRM/KA/RERA/1251/310/PR/190625/007855</p>
+</div>
     <header>
         <div class="container">
             <div class="w-100 d-flex justify-content-between align-items-center">
